fixed expanding/collapsing forecast boxes for each layout

--- a/src/styles/components/desktoplayout.scss
+++ b/src/styles/components/desktoplayout.scss
@@ -33,3 +33,6 @@
 
   height: $d_weather-sub-height;
 }
+.hidden {
+  display: none;
+}
