--- a/src/styles/components/forecastday.scss
+++ b/src/styles/components/forecastday.scss
@@ -19,7 +19,8 @@
   margin: 0.5rem;
 }
 #resizeBtn {
-  font-size: 1.5rem;
+  color: rgb(23, 160, 151);
+  height: 2rem;
 }
 
 @media only screen and (min-width: $MOBILE-WIDTH-BREAKPOINT) {
