--- a/src/styles/components/mobilelayout.scss
+++ b/src/styles/components/mobilelayout.scss
@@ -40,17 +40,20 @@
   width: 100%;
 }
 // Weather Summary | Weather Details
-.m-box-2-L,
-.m-box-2-R {
+.m-box-2 {
   height: $m_weather-sub-height;
   top: $m_headline-height + $m_weather-main-height;
 }
 // Forecast Day | Forecast Hour
-.m-box-3-L,
-.m-box-3-R {
+.m-box-3 {
   height: $m_weather-sub-height;
   top: $m_headline-height + $m_weather-main-height + $m_weather-sub-height;
 }
+.m-box-3--expanded {
+  height: $m_forecast-expanded-height;
+  top: $m_headline-height + $m_weather-main-height;
+}
+
 .m-tempButton {
   font-size: 1rem;
 }
